Fix orbit button alignment and change center glyph from 0-look

--- a/style.css
+++ b/style.css
@@ -126,9 +126,10 @@ body {
 }
 
 .orbit-buttons {
+  --orbit-radius: 110px;
   position: relative;
-  width: 360px;
-  height: 240px;
+  width: 380px;
+  height: 280px;
 }
 
 .orbit-buttons::before {
@@ -136,8 +137,8 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 190px;
-  height: 190px;
+  width: calc(var(--orbit-radius) * 2);
+  height: calc(var(--orbit-radius) * 2);
   transform: translate(-50%, -50%);
   border: 1px dashed rgba(255,255,255,0.28);
   border-radius: 50%;
@@ -168,19 +169,19 @@ body {
 }
 
 .orbit-buttons a:nth-of-type(1) {
-  transform: translate(-50%, -145px);
+  transform: translate(-50%, -50%) rotate(0deg) translateY(calc(var(--orbit-radius) * -1)) rotate(0deg);
 }
 
 .orbit-buttons a:nth-of-type(2) {
-  transform: translate(52px, -50%);
+  transform: translate(-50%, -50%) rotate(90deg) translateY(calc(var(--orbit-radius) * -1)) rotate(-90deg);
 }
 
 .orbit-buttons a:nth-of-type(3) {
-  transform: translate(-50%, 72px);
+  transform: translate(-50%, -50%) rotate(180deg) translateY(calc(var(--orbit-radius) * -1)) rotate(-180deg);
 }
 
 .orbit-buttons a:nth-of-type(4) {
-  transform: translate(-154px, -50%);
+  transform: translate(-50%, -50%) rotate(270deg) translateY(calc(var(--orbit-radius) * -1)) rotate(-270deg);
 }
 
 /* MOBILE FIX */
